--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NewsTk</string>
+    <string name="no_results">No results 😓</string>
+    <string name="news_link">source link</string>
+
 </resources>
