add detail fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">NewsTk</string>
     <string name="no_results">No results 😓</string>
     <string name="news_link">source link</string>
+    <string name="by">By </string>
 
 </resources>
